[gd_scene load_steps=4 format=3 uid="uid://cawd5fvgrisk8"]

[ext_resource type="Texture2D" uid="uid://cs1w8mp45l2c3" path="res://Art/frogdemon.png" id="1_rvrbt"]
[ext_resource type="Script" path="res://Scripts/FrogDemon.gd" id="2_11oy1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31t1c"]
size = Vector2(10, 25)

[node name="FrogDemon" type="Node2D" groups=["Demon"]]
script = ExtResource("2_11oy1")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_rvrbt")

[node name="Area2D" type="Area2D" parent="Sprite"]
collision_layer = 32
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_31t1c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DistCheckTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="DistCheckTimer" to="." method="_on_dist_check_timer_timeout"]
